# 3DsMax-XplnObj

./: .gitignore  CMakeLists.txt  conanfile.txt  license.txt  msvc-2017.bat  msvc-2019.bat  readme.md
ci/: build-release-vs2017.bat  build-vs2017.bat  upload-to-github.bat
cmake/: Sts3dmaxTarget.cmake  StsConan.cmake  StsDebugCommand.cmake  StsFixQtLibrariesType.cmake  StsGroupFiles.cmake  StsInfoFilesGenerator.cmake  StsProjectDesc.cmake  StsProjectDescCiEnvGenerator.cmake  StsUploadToGithub.cmake
conan-profiles/: readme.txt  vs2015MD-Debug  vs2015MD-Release  vs2015MT-Debug  vs2015MT-Release  vs2017MD-Debug  vs2017MD-Release  vs2017MT-Debug  vs2017MT-Release
doc/: changelog.rst  changelog.txt  dev-notes.md  install.txt  release-checklist.md
src/: stdafx.cpp  stdafx.h
src/3dmax/: DllEntry.cpp  ObjExporter.cpp  ObjExporter.h  ObjImporter.cpp  ObjImporter.h
src/3rdParties/: readme.txt
src/3rdParties/json/: json.hpp
src/additional/: readme.txt
src/additional/math/: Compare.h  Deg.h  Rad.h
src/additional/stsio/: DataStream.h  DataStreamI.h  DataStreamO.h
src/additional/utils/: BaseLogger.h  Export.h  SemVersion.h  Settings.h  Signal.h  Single.h  StringUtils.h
src/classes-desc/: ClassesDescriptions.cpp  ClassesDescriptions.h  CommonClassDesc.cpp  CommonClassDesc.h  ExporterDesc.cpp  ExporterDesc.h  ImporterDesc.cpp  ImporterDesc.h  LodObjDesc.cpp  LodObjDesc.h  MainObjDesc.cpp  MainObjDesc.h  SmokeObjDesc.cpp  SmokeObjDesc.h
src/common/: BaseLogger.h  Config.cpp  Config.h  Logger.cpp  Logger.h  NodeUtils.cpp  NodeUtils.h  NodeVisitor.cpp  NodeVisitor.h  String.h
src/converters/: Converter.cpp  Converter.h  ConverterATTR.cpp  ConverterATTR.h  ConverterAnim.cpp  ConverterAnim.h  ConverterAnimRotate.cpp  ConverterAnimRotate.h  ConverterAnimTranslate.cpp  ConverterAnimTranslate.h  ConverterAnimVisibility.cpp  ConverterAnimVisibility.h  ConverterDummy.cpp  ConverterDummy.h  ConverterLight.cpp  ConverterLight.h  ConverterLine.cpp  ConverterLine.h  ConverterLod.cpp  ConverterLod.h  ConverterMain.cpp  ConverterMain.h  ConverterMesh.cpp  ConverterMesh.h  ConverterSmoke.cpp  ConverterSmoke.h  ConverterToMax.cpp  ConverterToMax.h  ConverterToXpln.cpp  ConverterToXpln.h  ConverterUtils.cpp  ConverterUtils.h  Converterer.cpp  Converterer.h  ExportParams.h  ImportParams.h
src/gup/: CloneNodeChunk.cpp  CloneNodeChunk.h  ObjCommon.cpp  ObjCommon.h  Settings.cpp  Settings.h
src/models/: CommandsFile.cpp  CommandsFile.h  DatarefsFile.cpp  DatarefsFile.h  MdAnimRot.cpp  MdAnimRot.h  MdAnimTrans.cpp  MdAnimTrans.h  MdAnimVis.cpp  MdAnimVis.h  MdLight.cpp  MdLight.h  MdLinks.cpp  MdLinks.h  MdManip.cpp  MdManip.h  MdObjAttr.cpp  MdObjAttr.h  eDataId.h
src/models/bwc/: MdAnimIOOld.cpp  MdAnimIOOld.h  MdLightIOOld.cpp  MdLightIOOld.h  MdManipIOOld.cpp  MdManipIOOld.h  MdObjAttrIOOld.cpp  MdObjAttrIOOld.h  SerializationId.cpp  SerializationId.h  eClassesOld.h  stsu_data_istream.cpp  stsu_data_istream.h  stsu_data_ostream.cpp  stsu_data_ostream.h  stsu_data_stream.cpp  stsu_data_stream.h
src/models/io/: AnimIO.cpp  AnimIO.h  LightIO.cpp  LightIO.h  ManipIO.cpp  ManipIO.h  NodeIO.h  ObjAttrIO.cpp  ObjAttrIO.h
src/objects/: DirectDim.h  LodObj.cpp  LodObj.h  LodObjParams.h  LodObjParamsWrapper.cpp  LodObjParamsWrapper.h  MainObj.cpp  MainObj.h  MainObjParamsWrapper.cpp  MainObjParamsWrapper.h  MainObjectParams.h  MouseCallback.cpp  MouseCallback.h  ScaleDim.h  SmokeObj.cpp
src/objects/lod/: LodIcon-gen.cpp  LodIcon-gen.h  LodObj.cpp  LodObj.h  LodObjParamBlocks.cpp  LodObjParamBlocks.h  LodObjParams.h  LodObjParamsWrapper.cpp  LodObjParamsWrapper.h
src/objects/main/: MainObj.cpp  MainObj.h  MainObjBwcLoading.cpp  MainObjIcon-gen.cpp  MainObjIcon-gen.h  MainObjParamBlocks.cpp  MainObjParamBlocks.h  MainObjParamsWrapper.cpp  MainObjParamsWrapper.h  MainObjectParams.h
src/objects/smoke/: SmokeIcon-gen.cpp  SmokeIcon-gen.h  SmokeObj.cpp  SmokeObj.h  SmokeObjParamBlocks.cpp  SmokeObjParamBlocks.h  SmokeObjParams.h  SmokeObjParamsWrapper.cpp  SmokeObjParamsWrapper.h
src/presenters/: Commands.h  Datarefs.h  Dc.h  Dc.inl.h  IDcView.h  MainMenu.cpp  MainMenu.h  MainMenuPresenter.cpp  MainMenuPresenter.h
src/resource/: ResHelper.cpp  ResHelper.h  resource.h  xpln_obj_io.rc
src/sts/geometry/: DrConverters.h
src/sts/io/: DataStreamO.h
src/sts/notification/: Signal.h
src/sts/settings/: Settings.h  Settings.inl
src/sts/string/: StringConverters.h  StringUtils.h
src/sts/utilities/: Compare.h
src/ui/: AnimCalc.cpp  AnimCalc.h  DlgAbout.cpp  DlgAbout.h  DlgExport.cpp  DlgExport.h  DlgHasNewVersion.cpp  DlgHasNewVersion.h  DlgImport.cpp  DlgImport.h  DlgMessageBox.h  Factory.cpp  Factory.h  IWindow.h  LightAttr.cpp  LightAttr.h  MainDock.cpp  MainDock.h  ManipAttr.cpp  ManipAttr.h  ObjAttr.cpp  ObjAttr.h  UiUtilities.cpp  UiUtilities.h  UpdatedObjects.cpp  UpdatedObjects.h
src/ui-qt/toolFrame/: ToolFrame.cpp  ToolFrame.h
src/ui-win/: AnimCalc.cpp  AnimCalc.h  DlgAbout.cpp  DlgAbout.h  DlgDcView.h  DlgDcView.inl.h  DlgEditCommand.cpp  DlgEditCommand.h  DlgEditDataref.cpp  DlgEditDataref.h  DlgExport.cpp  DlgExport.h  DlgHasNewVersion.cpp  DlgHasNewVersion.h  DlgImport.cpp  DlgImport.h  DlgMessageBox.h  DlgSettings.cpp  DlgSettings.h  Factory.cpp  Factory.h  IWindow.h  LightAttr.cpp  LightAttr.h  MainDock.cpp  MainDock.h  ManipAttr.cpp  ManipAttr.h  ObjAttr.cpp  ObjAttr.h  UiUtilities.cpp  UiUtilities.h  UpdatedObjects.cpp  UpdatedObjects.h  Utils.cpp  Utils.h
src/ui-win/anim/: AnimRotateAxisView.cpp  AnimRotateAxisView.h  AnimRotateRollup.cpp  AnimRotateRollup.h  AnimTransView.cpp  AnimTransView.h  AnimVisView.cpp  AnimVisView.h  ChangeControllerWatcher.cpp  ChangeControllerWatcher.h
src/ui-win/controls-new/: Base.cpp  Base.h  Button.cpp  Button.h  CheckBox.cpp  CheckBox.h  ComboBox.cpp  ComboBox.h  Control.cpp  Control.h  DcList.cpp  DcList.h  Dialog.cpp  Dialog.h  (+25 more)
src/update/: SemVersion.cpp  SemVersion.h  UpdateChecker.cpp  UpdateChecker.h  UpdateCheckerJson.cpp
src/update-scene/: SceneUpdater.cpp  SceneUpdater.h
src/utilities/: Mesh2Cpp.cpp  Mesh2Cpp.h
(+163 files in other folders)
